// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaFootballFixturesTicker with flags should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX dnblLs"
  />
  <div
    class="sc-bwzfXH uxFfR"
    height="80"
  >
    Placeholder
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker with flags should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX dnblLs"
  >
    <div>
      Widget
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX dnblLs"
  />
  <div
    class="sc-bwzfXH uxFfR"
    height="80"
  >
    Placeholder
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX dnblLs"
  >
    <div>
      Widget
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly with fixturesPageUrl 1`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX dnblLs"
  />
  <div
    class="sc-bwzfXH uxFfR"
    height="80"
  >
    Placeholder
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly with fixturesPageUrl 2`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX dnblLs"
  >
    <div>
      Widget
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly with isApp property 1`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX ifhDav"
  />
  <div
    class="sc-bwzfXH uxFfR"
    height="80"
  >
    Placeholder
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly with isApp property 2`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX ifhDav"
  >
    <div>
      Widget
    </div>
  </div>
</DocumentFragment>
`;
